# rust-kata-camping

./: .gitignore  Cargo.toml  README.md  add20000.cc
Day1-Memory-In-Stack-Or-Heap/: add20000.cc
Day1-Memory-In-Stack-Or-Heap/getting-started/: Cargo.toml
Day1-Memory-In-Stack-Or-Heap/getting-started/src/: main.rs
Day3-Curl-Rust/: Cargo.toml
day3_curl_rust/: Cargo.toml
day3_curl_rust/src/: main.rs
day4_get_hands_on_cli/: Cargo.toml
day4_get_hands_on_cli/src/: get.rs  main.rs
day5_picture_server/: Cargo.toml  [DAY5]README.md  abi.proto  build.rs
day5_picture_server/src/: main.rs
day5_picture_server/src/engine/: image2.rs  mod.rs  photon.rs
day5_picture_server/src/pb/: abi.rs  mod.rs
day6_sql_query_tool/: Cargo.toml
day6_sql_query_tool/examples/: covid.rs  covid_done.rs  dialect.rs  local.rs
day6_sql_query_tool/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
doc/day3_curl_rust/arithmatic/: fn.apply.html  sidebar-items.js
doc/day3_curl_rust/control_syntax/: fn.fib_for.html  fn.fib_recur.html  index.html
doc/day3_curl_rust/data_structure/: enum.States.html  sidebar-items.js  struct.Topic.html
doc/day7_lifetime/: all.html
doc/day8_type_system/: all.html  index.html
doc/httpre/: fn.print_body_sytect.html
doc/queryer/: all.html
doc/queryer_py/: fn.example_sql.html  index.html
doc/src/day8_type_system/: mut_immute.rs.html
doc/src/queryer/: convert.rs.html
doc/thumbor/: fn.generate.html  fn.retrieve_image.html  struct.Params.html  type.Cache.html
doc/thumbor/engine/: trait.SpecTransform.html
docs/: search-index.js  settings.html  source-files.js
docs/day3_curl_rust/: fn.main.html  index.html
docs/day3_curl_rust/arithmatic/: fn.cube.html  fn.square.html
docs/day3_curl_rust/control_syntax/: fn.swap_add.html
docs/day7_lifetime/: fn.strtok.html  sidebar-items.js
docs/getting_started/: fn.main.html  index.html
docs/httpre/: enum.SubCommand.html  fn.get.html  fn.main.html  fn.parse_kv_pair.html  fn.parse_url.html  fn.print_body.html  fn.print_headers.html  sidebar-items.js  struct.Get.html  struct.KvPair.html  struct.Post.html
docs/queryer/: sidebar-items.js  struct.DataSet.html  struct.TyrDialect.html
docs/thumbor/: all.html  fn.main.html  fn.print_test_url.html  sidebar-items.js
(+44 files in other folders)
