[package]
name = "thumbor"
version = "0.1.0"
authors = ["JimReal <liulijng@bupt.edu.cn>"]
edition = "2018"
descriptions = "day5_picture_server: a image server to generate snapshot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2"
anyhow = "1"
base64 = "0.13"
bytes = "1"
image = "0.23"
image2= "1.1.1"
lazy_static = "1"
lru = "0.6"
percent-encoding = "2"
photon-rs = "0.3"
prost = "0.8"
reqwest = "0.11"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
tower = {version = "0.4", features = ["util", "timeout", "load-shed", "limit"]}
tower-http = {version = "0.1", features = ["add-extension", "compression-full", "trace"]}
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
prost-build = "0.8"