[package]
name = "getting-started"
version = "0.1.0"
authors = ["JimReal <liulijng@bupt.edu.cn>"]
edition = "2018"
license = "MIT"
description = "A getting started with overall cargo, crate `rand`, control syntax `loop`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"